fixed spacing of news for mobile

--- a/src/App.css
+++ b/src/App.css
@@ -120,9 +120,12 @@
 
 .card-grid{
 	padding-bottom: 50px;
-	margin:auto;
+}
+
+.cardStyle{
 	display: flex;
-	justify-content: space-evenly;
+	align-items: center;
+	justify-content: center;
 }
 
 /* news page end */
